Fixed element sizing for mobile viewing (no more horizontal scrolling). Added icons for social media in the footer.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -82,6 +82,7 @@ header {
 @media only screen and (max-width: 480px) {
   header {
     position: static;
+    padding: 0;
   }
 
   #menu {
@@ -97,11 +98,19 @@ header {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    margin-right: 3rem;
+    /*margin-right: 3rem;*/
   }
 
   #mobile-menu img {
     height: 2.33rem;
+  }
+
+  #padding1 {
+    padding-left: 1.5rem;
+  }
+
+  #padding2 {
+    padding-right: 1.5rem;
   }
 }
 
@@ -143,7 +152,7 @@ header {
 }
 
 #button:hover {
-  background-color: rgb(102, 109, 232);
+  background-color: rgb(7, 200, 76);
   text-decoration: underline;
 }
 
@@ -166,7 +175,7 @@ header {
     text-align: center;
     background-color: rgb(132, 195, 232);
     color: white;
-    padding-bottom: 2rem;
+    padding: 1rem 0 2rem 0;
   }
 
   #slogan h1 {
@@ -294,10 +303,13 @@ header {
     flex-direction: column;
     width: 100%;
     padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .event img {
     width: 90%;
+    margin-left: 1.33rem;
   }
 }
 
@@ -537,7 +549,7 @@ footer span {
   color: white;
 }
 
-footer ul {
+#footer-browser {
   margin-top: 1.5rem;
 }
 
@@ -555,16 +567,28 @@ footer li a:hover {
   text-decoration: underline;
 }
 
+#footer-mobile {
+  display: none;
+}
+
 @media only screen and (max-width: 480px) {
+  #footer-browser {
+    display: none;
+  }
+
+  #footer-mobile {
+    display: block;
+    margin-top: 0.5rem;
+  }
+
   footer {
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   footer span {
     margin-top: 0;
-  }
-
-  footer ul {
-    display: none;
+    flex-grow: 0;
   }
 }
